--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -4,8 +4,7 @@
 // @import 'sprite';
 @import 'base';
 @import 'homepage';
-// @import 'cart';
-// @import 'modal';
+@import 'modal';
 // @import 'nav';
 // @import 'transitions';
 @import 'mobmenu'; 
