--- a/app/template/scss/_modal.scss
+++ b/app/template/scss/_modal.scss
@@ -143,16 +143,7 @@ form{
 	}
 }
 
-#callback{
-	.modal-dialog{
-		margin-left: 0;
-		margin-right: 0;
-		margin-top: 98px;
-		padding: 40px 0 12px;
-		width: 100%;
-	}
-
-
+.modal{
 	form{
 		// background-color: $color2;
 		@extend .italic;
@@ -183,7 +174,7 @@ form{
 			margin-right: auto;
 			display: block;
 			margin-top: 1.8rem;
-			padding: 1.2rem 3.7rem;
+			padding: 1rem 4.5rem;
 			border-radius: 4px;
 			&:hover{
 				// opacity: .9;
@@ -202,6 +193,65 @@ form{
 		}
 	}
 }
+
+#callback{
+	.modal-dialog{
+		margin-left: 0;
+		margin-right: 0;
+		margin-top: 98px;
+		padding: 40px 0 12px;
+		width: 100%;
+	}
+	form{
+		.form-control{
+			width: 100%;
+		}
+	}
+}
+
+
+
+#writeus{
+	form{
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+	.form-control{
+		@include font-size(1.5);
+		margin-bottom: 1rem;
+	}
+	.row{
+		display: flex;
+		justify-content: space-between;
+		.form-control{
+			width: 32.5%;
+		}
+	}
+
+	textarea.form-control{
+		height: 8.5rem;
+		margin: 0;
+		padding: .5rem 1rem;
+		text-align: left;
+	}
+
+	.thank{
+		margin-bottom: .4rem;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #about{
 	.modal__content{
