--- a/app/template/scss/_homepage.scss
+++ b/app/template/scss/_homepage.scss
@@ -8,8 +8,8 @@ $h1 : 360px;
 .slider{
 	height: 600px;
 	position: relative;
-	margin-top: -110px;
-	margin-bottom: -$h1+20;
+	margin-top: -124px;
+	margin-bottom: -$h1+18;
 	z-index: 9;
 	&__item{
 		text-align: center;
@@ -28,7 +28,7 @@ $h1 : 360px;
 		padding: .5rem 1rem;
 		position: absolute;
 		text-transform: uppercase;
-		top: 170px;
+		top: 178px;
 	}
 	.bx-controls{
 		position: absolute;
@@ -61,7 +61,7 @@ $h1 : 360px;
 ---------------------------*/
 .about{
 	height: $h1;
-	margin-bottom: 4rem;
+	// margin-bottom: 4rem;
 	position: relative;
 	width: 55rem;
 	z-index: 10;
@@ -77,7 +77,7 @@ $h1 : 360px;
 ---------------------------*/
 .services{
 	&__carousel{
-		margin-top: 3rem;
+		margin: 3rem 0 2.7rem;
 	}
 	&__item{
 		@extend .block-center;
@@ -159,14 +159,16 @@ $h1 : 360px;
 /* =approach
 ---------------------------*/
 .approach{
+	margin-top: 2.3rem;
 	.flexbox{
-		margin-bottom: 3rem;
+		margin-bottom: 2.3rem;
 	}
 }
 
 .sqicons{
 	&-flexbox{
-		flex-wrap: wrap;		
+		flex-wrap: wrap;
+		margin-top: -1.8rem;
 	}
 	&__item{
 		display: flex;
@@ -193,10 +195,9 @@ $h1 : 360px;
 	}
 
 	&__text{
-		padding-left: 1.2rem;
+		padding-left: .9rem;
 		padding-top: 1rem;
 	}
-
 }
 /* =/approach
 ---------------------------*/
@@ -225,7 +226,7 @@ $h1 : 360px;
 /* =rubrics
 ---------------------------*/
 .rubrics{
-	margin-bottom: 2rem;
+	margin: 3rem 0 2rem;
 	&__nav{
 		@include font-size(2.4);
 		color: $color5;
@@ -257,7 +258,7 @@ $h1 : 360px;
 	}
 
 	&__body{
-		margin-top: 2rem;
+		margin-top: 2.6rem;
 	}
 	
 	#tab-news,
@@ -267,8 +268,7 @@ $h1 : 360px;
 	{
 		.flexbox{
 			justify-content: space-around;
-			margin-left: auto;
-			margin-right: auto;
+			margin: 0 auto 2.4rem;
 			width: 85%;
 		}
 	}
@@ -287,7 +287,7 @@ $h1 : 360px;
 		&-title{
 			@include font-size(1.4);
 			font-family: "SegoeUIBoldItalic";
-			height: 9.5rem;
+			height: 9rem;
 			padding-top: .8rem;
 		}
 
@@ -358,9 +358,9 @@ $h1 : 360px;
 /* =partners
 ---------------------------*/
 .partners{
-	margin-bottom: 3rem;
+	// margin-bottom: 3rem;
 	&__items{
-		margin: 2rem 0;	
+		margin: 3rem 0;	
 		justify-content: space-around;
 		a{
 			display: block;
@@ -375,26 +375,34 @@ $h1 : 360px;
 /* =/partners
 ---------------------------*/
 
-#map{
+
+
+/* =map
+---------------------------*/
+.map{
+	margin-top: 3rem;
+}
+#ymap{
+	margin-top: 2.6rem;
 	height: 400px;
 }
+/* =/map
+---------------------------*/
 
 
 
 /* =feedback
 ---------------------------*/
 .feedback{
-	// background-color: rgba(255, 255, 255, .8);
-	margin-left: auto;
-	margin-right: auto;
-	width: 900px;
+	margin: 3.8rem auto 0;
+	// width: 900px;
 	z-index: 999;
 	.title{
 		color: $color3;
 	}
 	.vcard{
 		@include font-size(1.5);
-		margin-bottom: 1.4rem;
+		margin: 1rem 0 1.4rem;
 		.name{
 			display: none;
 		}
@@ -413,13 +421,12 @@ $h1 : 360px;
 	}
 
 	&__content{
-		padding: .8rem 0 1rem;
+		padding: 0 0 1rem;
 	}
 	&__form{
 		border: 1px solid #e9e9e9;
 		box-shadow: 0 0 3px #e9e9e9;
-		margin-left: auto;
-		margin-right: auto;
+		margin: .8rem auto 0;
 		padding: .8rem .8rem 1.8rem;
 		position: relative;
 		width: 765px;
@@ -460,7 +467,7 @@ $h1 : 360px;
 		}
 
 		.policy{
-			margin-top: 1.9rem;
+			margin-top: 1.7rem;
 		}
 
 		.submit{
@@ -493,16 +500,5 @@ $h1 : 360px;
 		}
 	}
 }
-
-
-.feedback__form{
-
-}
 /* =/feedback
 ---------------------------*/
-
-
-#ymap {
-    height: 435px;
-    width: 100%;
-}
