--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -4,6 +4,8 @@
 // @import 'sprite';
 @import 'base';
 @import 'homepage';
+@import 'inner';
+@import 'about';
 @import 'modal';
 // @import 'nav';
 // @import 'transitions';
