Добавлено информационное всплывающее окно

--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -156,7 +156,7 @@ input::-moz-focus-inner {
 .bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .close-modal span {
   font-family: "SegoeUIBold"; }
 
-.italic, .neck .writeus-link, .more, .policy, .footer__cities, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #about .modal__content {
+.italic, .neck .writeus-link, .more, .policy, .footer__cities, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content {
   font-family: "SegoeUIItalic"; }
 
 /*** standart classes *****/
@@ -1058,7 +1058,6 @@ label.error {
   .modal-dialog .title {
     font-size: 18px;
     font-size: 1.8rem;
-    color: #f7f7f7;
     font-size: 18px;
     font-size: 1.8rem;
     text-transform: uppercase;
@@ -1185,6 +1184,17 @@ form .thank {
 
 #writeus .thank {
   margin-bottom: .4rem; }
+
+#infomodal .modal__content .title {
+  font-size: 22px;
+  font-size: 2.2rem;
+  color: #303030;
+  font-weight: normal;
+  text-align: center;
+  text-transform: none; }
+
+#infomodal .modal__content p {
+  margin: .8rem 0; }
 
 #about .modal__content {
   background-color: #fff;
