--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -4,7 +4,7 @@
 // @import 'sprite';
 @import 'base';
 @import 'homepage';
-@import 'inner';
+@import 'breadcrumbs';
 @import 'about';
 @import 'modal';
 // @import 'nav';
