--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -6,6 +6,7 @@
 @import 'homepage';
 @import 'breadcrumbs';
 @import 'about';
+@import 'services';
 @import 'modal';
 // @import 'nav';
 // @import 'transitions';
