--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -153,10 +153,10 @@ input::-moz-focus-inner {
 .cgi, .contacts__ring, .footer__navcopyright .copyright__right, .kreotif {
   font-family: 'CenturyGothicItalic'; }
 
-.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, .close-modal span {
+.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .close-modal span {
   font-family: "SegoeUIBold"; }
 
-.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content {
+.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content {
   font-family: "SegoeUIItalic"; }
 
 /*** standart classes *****/
@@ -171,10 +171,12 @@ h1 {
   text-transform: uppercase; }
 
 h2 {
-  font-size: 2.4rem; }
+  font-size: 2.4rem;
+  font-weight: normal; }
 
 h3 {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  font-weight: normal; }
 
 header h1,
 h1.title,
@@ -189,9 +191,9 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-.tdn, .nav > li .subnav li a, .text a, .more a, .policy a, .footer__cities a, .kreotif a, .rubrics__news a, .rubrics__faq a, .rubrics__reviews a, .feedback .vcard .email, .modal form .policy a {
+.tdn, .nav > li .subnav li a, .text a, .more a, .policy a, .footer__cities a, .kreotif a, .rubrics__news a, .rubrics__faq a, .rubrics__reviews a, .feedback .vcard .email, .breadcrumbs li.B_crumb a, .modal form .policy a {
   text-decoration: none; }
-  .tdn:hover, .nav > li .subnav li a:hover, .text a:hover, .more a:hover, .policy a:hover, .footer__cities a:hover, .kreotif a:hover, .rubrics__news a:hover, .rubrics__faq a:hover, .rubrics__reviews a:hover, .feedback .vcard .email:hover, .modal form .policy a:hover {
+  .tdn:hover, .nav > li .subnav li a:hover, .text a:hover, .more a:hover, .policy a:hover, .footer__cities a:hover, .kreotif a:hover, .rubrics__news a:hover, .rubrics__faq a:hover, .rubrics__reviews a:hover, .feedback .vcard .email:hover, .breadcrumbs li.B_crumb a:hover, .modal form .policy a:hover {
     text-decoration: underline; }
 
 .tdu {
@@ -1127,6 +1129,26 @@ label.error {
       align-items: center;
       justify-content: center;
       text-align: center; }
+
+main.text h2 {
+  font-size: 18px;
+  font-size: 1.8rem; }
+
+main.text h3 {
+  font-size: 14px;
+  font-size: 1.4rem;
+  margin: .5rem 0; }
+
+main.text em {
+  font-style: normal; }
+
+main.text table {
+  border-collapse: collapse; }
+  main.text table td {
+    border: 1px solid #ccc;
+    padding: 8px; }
+  main.text table.table-noborder td {
+    border: none; }
 
 .modal-open {
   overflow: hidden; }
