--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -7,6 +7,7 @@
 @import 'breadcrumbs';
 @import 'about';
 @import 'services';
+@import 'inner';
 @import 'modal';
 // @import 'nav';
 // @import 'transitions';
