--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -562,7 +562,8 @@ label.error {
 .share {
   font-size: 18px;
   font-size: 1.8rem;
-  color: #808080; }
+  color: #808080;
+  margin: 4rem auto 2.5rem; }
   .share p {
     padding-right: 2.5rem; }
 
@@ -1063,6 +1064,8 @@ label.error {
     left: 0;
     top: 0;
     width: 100%; }
+  .allservices__item:last-child {
+    margin-bottom: 0; }
   .allservices__item > *:not(div) {
     position: relative;
     z-index: 2; }
