Добавлены "фото" в "наши работы"

--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -8,7 +8,9 @@
 @import 'about';
 @import 'services';
 @import 'inner';
+@import 'works';
 @import 'modal';
+@import 'pagination';
 // @import 'nav';
 // @import 'transitions';
 @import 'mobmenu'; 
