--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -144,7 +144,7 @@ input::-moz-focus-inner {
   font-style: normal;
   font-weight: normal; }
 
-.cg, .nav {
+.cg, .nav, .subcat ul {
   font-family: 'CenturyGothic'; }
 
 .cgb {
@@ -153,10 +153,10 @@ input::-moz-focus-inner {
 .cgi, .contacts__ring, .footer__navcopyright .copyright__right, .kreotif, .reviews__top {
   font-family: 'CenturyGothicItalic'; }
 
-.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .btn, .close-modal span {
+.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .btn, .photo__title, .close-modal span {
   font-family: "SegoeUIBold"; }
 
-.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, .reviews__carousel, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content {
+.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, .reviews__carousel, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content, .pagination {
   font-family: "SegoeUIItalic"; }
 
 /*** standart classes *****/
@@ -191,9 +191,9 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0; }
 
-.tdn, .nav > li .subnav li a, .text a, .more a, .policy a, .footer__cities a, .kreotif a, .rubrics__news a, .rubrics__faq a, .rubrics__reviews a, .feedback .vcard .email, .breadcrumbs li.B_crumb a, .listlinks .flexbox a, .modal form .policy a {
+.tdn, .nav > li .subnav li a, .text a, .more a, .policy a, .footer__cities a, .kreotif a, .rubrics__news a, .rubrics__faq a, .rubrics__reviews a, .feedback .vcard .email, .breadcrumbs li.B_crumb a, .listlinks .flexbox a, .modal form .policy a, .pagination a {
   text-decoration: none; }
-  .tdn:hover, .nav > li .subnav li a:hover, .text a:hover, .more a:hover, .policy a:hover, .footer__cities a:hover, .kreotif a:hover, .rubrics__news a:hover, .rubrics__faq a:hover, .rubrics__reviews a:hover, .feedback .vcard .email:hover, .breadcrumbs li.B_crumb a:hover, .listlinks .flexbox a:hover, .modal form .policy a:hover {
+  .tdn:hover, .nav > li .subnav li a:hover, .text a:hover, .more a:hover, .policy a:hover, .footer__cities a:hover, .kreotif a:hover, .rubrics__news a:hover, .rubrics__faq a:hover, .rubrics__reviews a:hover, .feedback .vcard .email:hover, .breadcrumbs li.B_crumb a:hover, .listlinks .flexbox a:hover, .modal form .policy a:hover, .pagination a:hover {
     text-decoration: underline; }
 
 .tdu {
@@ -201,7 +201,7 @@ input::-moz-focus-inner {
   .tdu:hover {
     text-decoration: none; }
 
-.before, .nav > li .subnav:before, .services__item a:after, .team__link:after, .allservices__link:before, .allservices__item:before, .allservices__item .goody__item-link:before, .gallery__item a:after, .btn:after, .listlinks .flexbox li:before {
+.before, .nav > li .subnav:before, .services__item a:after, .team__link:after, .allservices__link:before, .allservices__item:before, .allservices__item .goody__item-link:before, .gallery__item a:after, .btn:after, .listlinks .flexbox li:before, .photo__item a:after {
   content: "";
   display: block;
   position: absolute; }
@@ -301,7 +301,7 @@ header:not(.header) {
       opacity: 1;
       z-index: 99; }
 
-.gradient-green, .contacts, .rubrics__article-title, .allservices__link:before, .btn, .modal form .submit {
+.gradient-green, .contacts, .rubrics__article-title, .allservices__link:before, .btn, .photo__item a:after, .modal form .submit {
   background-image: -webkit-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
   background-image: -o-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
   background-image: linear-gradient(to bottom, #8bbaa3 0%, #317b57 100%);
@@ -405,7 +405,7 @@ header:not(.header) {
   .more a {
     color: #307a56; }
 
-.block-center, .services__item, .feedback__form .submit {
+.block-center, .services__item, .feedback__form .submit, .photo__item {
   display: block;
   margin-left: auto;
   margin-right: auto; }
@@ -1263,6 +1263,92 @@ main.text {
     .listlinks .flexbox a:hover {
       color: #307a56; }
 
+/* =subcat
+---------------------------*/
+.subcat ul {
+  display: flex;
+  justify-content: center; }
+  .subcat ul li {
+    margin: 0 1.5rem; }
+    .subcat ul li a {
+      color: #808080;
+      border-bottom: 1px solid transparent;
+      text-decoration: none; }
+      .subcat ul li a:hover {
+        color: #307a56;
+        border-bottom: 1px dashed currentColor; }
+    .subcat ul li span {
+      border-bottom: 1px dashed currentColor;
+      color: #307a56;
+      cursor: default; }
+
+/* =/subcat
+---------------------------*/
+/* =photos
+---------------------------*/
+.photo {
+  flex-wrap: wrap; }
+  .photo__item {
+    color: #fff;
+    flex-basis: 33.3%;
+    flex-wrap: wrap;
+    min-height: 308px;
+    margin: 2.8rem 0;
+    text-align: center; }
+    .photo__item a {
+      background-color: rgba(48, 122, 86, 0.7);
+      color: #fff;
+      display: block;
+      overflow: hidden;
+      position: relative;
+      width: 350px; }
+      .photo__item a img {
+        -webkit-transition: transform 0.2s ease-out;
+        transition: transform 0.2s ease-out; }
+      .photo__item a:hover img {
+        transform: scale(1.05); }
+      .photo__item a:hover:after {
+        opacity: .8; }
+      .photo__item a:after {
+        -webkit-transition: opacity 0.2s ease-out;
+        transition: opacity 0.2s ease-out;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        top: 0;
+        width: 100%;
+        z-index: 1; }
+    .photo__item hr {
+      background: #fff;
+      border: none;
+      display: block;
+      height: 3px;
+      margin: 2rem auto;
+      width: 85px; }
+  .photo__pic {
+    min-height: 308px; }
+    .photo__pic img {
+      max-width: 100%;
+      height: auto;
+      display: block; }
+  .photo__textbox {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    height: 100%; }
+    .photo__textbox .flexbox {
+      height: 100%;
+      flex-flow: column;
+      justify-content: center; }
+  .photo__title {
+    font-size: 24px;
+    font-size: 2.4rem;
+    text-transform: uppercase; }
+  .photo__title, .photo__shorttext {
+    padding: 0 20px; }
+
+/* =/photos
+---------------------------*/
 .modal-open {
   overflow: hidden; }
   .modal-open .outerwrapper {
@@ -1454,6 +1540,20 @@ form .thank {
 .submit:disabled {
   cursor: default !important;
   background-color: #ccc !important; }
+
+.pagination {
+  border-top: 1px solid;
+  border-image: linear-gradient(to left, white 1%, #9bbcaa 50%, white 100%) 100% 0 100% 0/1px 0 1px 0 stretch;
+  margin-top: 2.5rem;
+  padding: 1.5rem 0;
+  text-align: center; }
+  .pagination a, .pagination span {
+    margin: 0 .2rem; }
+  .pagination a:hover {
+    color: #307a56; }
+  .pagination .current {
+    color: #307a56;
+    text-decoration: underline; }
 
 /* =mobile-menu
 ---------------------------*/
