--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -153,7 +153,8 @@ input::-moz-focus-inner {
 .cgi, .contacts__ring, .footer__navcopyright .copyright__right, .kreotif, .reviews__top {
   font-family: 'CenturyGothicItalic'; }
 
-.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .btn, .photo__title, .close-modal span {
+.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .rubrics__article-title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .btn, .photo__title,
+.video__title, .close-modal span {
   font-family: "SegoeUIBold"; }
 
 .italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, .reviews__carousel, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content, .pagination {
@@ -201,7 +202,8 @@ input::-moz-focus-inner {
   .tdu:hover {
     text-decoration: none; }
 
-.before, .nav > li .subnav:before, .services__item a:after, .team__link:after, .allservices__link:before, .allservices__item:before, .allservices__item .goody__item-link:before, .gallery__item a:after, .btn:after, .listlinks .flexbox li:before, .photo__item a:after {
+.before, .nav > li .subnav:before, .services__item a:after, .team__link:after, .allservices__link:before, .allservices__item:before, .allservices__item .goody__item-link:before, .gallery__item a:after, .btn:after, .listlinks .flexbox li:before, .photo__item a:after,
+.video__item a:after {
   content: "";
   display: block;
   position: absolute; }
@@ -301,7 +303,8 @@ header:not(.header) {
       opacity: 1;
       z-index: 99; }
 
-.gradient-green, .contacts, .rubrics__article-title, .allservices__link:before, .btn, .photo__item a:after, .modal form .submit {
+.gradient-green, .contacts, .rubrics__article-title, .allservices__link:before, .btn, .photo__item a:after,
+.video__item a:after, .modal form .submit {
   background-image: -webkit-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
   background-image: -o-linear-gradient(top, #8bbaa3 0%, #317b57 100%);
   background-image: linear-gradient(to bottom, #8bbaa3 0%, #317b57 100%);
@@ -405,7 +408,8 @@ header:not(.header) {
   .more a {
     color: #307a56; }
 
-.block-center, .services__item, .feedback__form .submit, .photo__item {
+.block-center, .services__item, .feedback__form .submit, .photo__item,
+.video__item {
   display: block;
   margin-left: auto;
   margin-right: auto; }
@@ -1286,30 +1290,37 @@ main.text {
 ---------------------------*/
 /* =photos
 ---------------------------*/
-.photo {
+.photo,
+.video {
   flex-wrap: wrap; }
-  .photo__item {
+  .photo__item,
+  .video__item {
     color: #fff;
     flex-basis: 33.3%;
     flex-wrap: wrap;
     min-height: 308px;
     margin: 2.8rem 0;
     text-align: center; }
-    .photo__item a {
+    .photo__item a,
+    .video__item a {
       background-color: rgba(48, 122, 86, 0.7);
       color: #fff;
       display: block;
       overflow: hidden;
       position: relative;
       width: 350px; }
-      .photo__item a img {
+      .photo__item a img,
+      .video__item a img {
         -webkit-transition: transform 0.2s ease-out;
         transition: transform 0.2s ease-out; }
-      .photo__item a:hover img {
+      .photo__item a:hover img,
+      .video__item a:hover img {
         transform: scale(1.05); }
-      .photo__item a:hover:after {
+      .photo__item a:hover:after,
+      .video__item a:hover:after {
         opacity: .8; }
-      .photo__item a:after {
+      .photo__item a:after,
+      .video__item a:after {
         -webkit-transition: opacity 0.2s ease-out;
         transition: opacity 0.2s ease-out;
         height: 100%;
@@ -1318,34 +1329,50 @@ main.text {
         top: 0;
         width: 100%;
         z-index: 1; }
-    .photo__item hr {
+    .photo__item hr,
+    .video__item hr {
       background: #fff;
       border: none;
       display: block;
       height: 3px;
       margin: 2rem auto;
       width: 85px; }
-  .photo__pic {
+  .photo__pic,
+  .video__pic {
     min-height: 308px; }
-    .photo__pic img {
+    .photo__pic img,
+    .video__pic img {
       max-width: 100%;
       height: auto;
       display: block; }
-  .photo__textbox {
+  .photo__textbox,
+  .video__textbox {
     position: absolute;
     top: 0;
     z-index: 2;
     height: 100%; }
-    .photo__textbox .flexbox {
+    .photo__textbox .flexbox,
+    .video__textbox .flexbox {
       height: 100%;
       flex-flow: column;
       justify-content: center; }
-  .photo__title {
+  .photo__title,
+  .video__title {
     font-size: 24px;
     font-size: 2.4rem;
     text-transform: uppercase; }
-  .photo__title, .photo__shorttext {
+  .photo__title, .photo__shorttext,
+  .video__title,
+  .video__shorttext {
     padding: 0 20px; }
+
+.video__textbox {
+  background: url(../images/play.svg) no-repeat center center; }
+  .video__textbox .flexbox {
+    justify-content: flex-end; }
+
+.video__shorttext {
+  padding-bottom: 2.5rem; }
 
 /* =/photos
 ---------------------------*/
